# url_shortener

./: .gitignore  README.md  codecov.yaml  pyproject.toml
.github/workflows/: hello_actions.yaml  python-checks.yml
app/: .coveragerc  .env.template  .pre-commit-config.yaml  config.default.yaml  film_slugs.json  lifespan.py  main.py  manage.py  short_url_slugs.json  stuff.py
app/api/: __init__.py  jinja_temp.py  main_views.py
app/api/v1/: __init__.py  redirect.py
app/api/v1/auth/services/: by_token.py  by_username_and_password.py
app/api/v1/films/: crud.py  views.py
app/api/v1/films/views/: __init__.py  details.py  list.py
app/api/v1/url_shortener/: crud.py  views.py
app/api/v1/url_shortener/views/: __init__.py  details.py  list.py
app/commands/: cli.py  hello.py  tokens.py
app/core/: __init__.py  config.py
app/fronted/: index.html  login_form.html  registration-from.html
app/frontend/: home.html  index.html  registration-from.html
app/schemas/: __init__.py  films.py  short_url.py
app/services/: utils.py
app/services/auth/: by_token.py  by_username_and_password.py
app/services/dependencies/: both.py  films.py  other.py  url_shortener.py
app/services/frameworks/: cache.py
app/services/utils/: load_dopm_data.py
app/storage/: __init__.py
app/storage/film/: crud.py  exception.py
app/storage/short_ulr/: crud.py  exceptions.py
app/templates/: about.html  base.html  home.html
app/templates/components/: navbar.html
app/templates/film/: create.html  list.html  update.html
app/templates/macro/: schema_post_form.html  upt_del.html
app/templates/short_url/: create.html  list.html  update.html
app/testing/: conftest.py
app/testing/test_api/: conftest.py
app/testing/test_api/test_services/test_dependencies/: test_url_shortener.py
app/testing/test_api/test_v1/: test_views.py
app/testing/test_api/test_v1/test_auth/test_services/: test_redis_token_storage.py
app/testing/test_api/test_v1/test_films/: test_crud.py
app/testing/test_api/test_v1/test_films/test_views/: test_create.py  test_delete.py  test_failed.py  test_particular_update.py  test_update.py
app/testing/test_api/test_v1/test_url_shortener/: test_crud.py
app/testing/test_api/test_v1/test_url_shortener/test_views/: test_create.py  test_delete.py  test_particular_update.py  test_update.py
app/testing/test_schemas/: films.py  test_films.py  test_short_url.py
app/web/: __init__.py  main_views.py
app/web/film/: __init__.py  delete.py  details.py  list.py  update.py
app/web/short_url/: __init__.py  delete.py  details.py  list.py  updated.py
